--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -1,14 +1,8 @@
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
+/* CUSTOMIZE THE CAROUSEL */
 .carousel {
   height: 500px;
   margin-bottom: 60px;
 }
-/* Since positioning the image, we need to help out the caption */
-
-/* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
   background-color: #777;
@@ -19,4 +13,10 @@
   left: 0;
   min-width: 100%;
   height: 500px;
+}
+#style-back{
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  border-radius: 20px;
+  padding-top: 0px;
 }
