--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,23 +1,28 @@
 <div class="container">
-<h1>Booking information</h1>
+	<h1>Booking information</h1>
 
-<strong>Property:</strong> <%= @booking.listing.name%> <br>
-<strong>Check-in:</strong> <%= @booking.check_in%> <br>
-<strong>Check-out:</strong> <%= @booking.check_out%> <br>
-<strong>Guests:</strong> <%= @booking.guests%> <br>
-<strong>By:</strong> <%= @booking.user.first_name%> <br><br>
+	<div class="booking-details">
+		<p><strong>Property:</strong> <%= @booking.listing.name%> </p>
+		<p><strong>Check-in:</strong> <%= @booking.check_in%></p>
+		<p><strong>Check-out:</strong> <%= @booking.check_out%> </p>
+		<p><strong>Guests:</strong> <%= @booking.guests%> </p>
+		<p><strong>By:</strong> <%= @booking.user.first_name%> </p>
 
-<strong>Total cost:</strong> <%= @booking.amount%> <br>
+		<p><strong>Total cost:</strong> <%= @booking.amount%> </p>
 
-<h3>Contact information</h3>
-<strong>Owner name:</strong> <%=@booking.listing.user.first_name%> <%=@booking.listing.user.last_name%><br>
-<strong>Email:</strong> <%=@booking.listing.user.email%><br>
-<strong>Phone:</strong> <%=@booking.listing.user.phone%><br><br>
+		<h3>Contact information</h3>
 
-<%= link_to 'Edit', edit_booking_path(@booking) %>
+		<p><strong>Owner name:</strong> <%=@booking.listing.user.first_name%> <%=@booking.listing.user.last_name%></p>
+		<p><strong>Email:</strong> <%=@booking.listing.user.email%></p>
+		<p><strong>Phone:</strong> <%=@booking.listing.user.phone%></p><br>
 
+	</div>
 
-<%= link_to 'Cancel booking', booking_path(@booking),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %>
+	<p>
+		<%= link_to 'Edit', edit_booking_path(@booking) %> | 
+		<%= link_to 'Cancel', booking_path(@booking),
+      method: :delete,
+      data: { confirm: 'Are you sure?' } %>
+	</p>
+	
 </div>	
