--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,39 +1,34 @@
 <div class="container">
-<hr class="featurette-divider">
-<footer>
-<div class='row' id="footer">
-  <div class="col-md-3">
-      <h4>About us</h4> 
-      <a href="#">Home</a><br>
-      <a href="#">About us</a><br>
-      <a href="#">Contact us</a><br>
-      <a href="#">Testimonials</a><br>
-      
-  </div>
-  <div class="col-md-3">
-    <h4>For you</h4> 
-    <a href="#">Guarantee</a><br>
-    <a href="#">Trust &amp; Safe</a><br>
-    <a href="#">Testimonials</a><br>
-    <a href="#">Policy</a><br>
-    
-  </div>
-  <div class="col-md-6 col-centered">
-    <h3>Guarantee, Safe &amp; Trust</h3> 
-    <br>
-    <div>
-    <img id="creditcards" src="/img/creditcards.png" />
+  <hr class="featurette-divider">
+  <footer>
+    <div class='row' id="footer">
+      <div class="col-md-3">
+        <h4>About us</h4> 
+        <a href="#">Home</a><br>
+        <a href="#">About us</a><br>
+        <a href="#">Contact us</a><br>
+        <a href="#">Testimonials</a><br> 
+      </div>
+
+      <div class="col-md-3">
+        <h4>For you</h4> 
+        <a href="#">Guarantee</a><br>
+        <a href="#">Trust &amp; Safe</a><br>
+        <a href="#">Testimonials</a><br>
+        <a href="#">Policy</a><br>
+      </div>
+
+      <div class="col-md-6 col-centered">
+        <h3>Guarantee, Safe &amp; Trust</h3> 
+        <br>
+        <div>
+          <img id="creditcards" src="/img/creditcards.png" />
+        </div>
+      </div>
     </div>
-  </div>
-</div>
- <hr class="featurette-divider">
-
-  <!-- /END THE FEATURETTES -->
-
-
-  <!-- FOOTER -->
-
-  <p class="pull-right"><a href="#">Back to top</a></p>
-  <p>© 2015 Airbnb, s.r.o. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-</footer>
-</div>
+    <hr class="featurette-divider">
+    <!-- FOOTER -->
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>© 2015 Airbnb, s.r.o. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+  </footer>
+</div> <!-- container -->
