--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,86 +1,81 @@
-<%if @listing.errors.any?%>
-  <div class="alert alert-danger" role="alert">
-  <h2><%=pluralize(@listing.errors.count, "errror")%> prohibited this listing from being saved:</h2>
-    <div class="alert alert-warning" role="alert">
-      <ol>
-      <%@listing.errors.full_messages.each do |error| %>
-      <li> <%=error%>. <br></li>
-      <%end%>
-      </ol>
-    </div>
+<%= form_for @listing, html: {multipart: true} do |f| %> 
+  <p>
+    <%= f.label :name_of_your_place %>: 
+    <%= f.text_field :name %>
+  </p>
+  
+  <%= f.label :avaibility %>
+  <p>
+    <%= f.date_field :start, id: "calendar", class: "datepicker-here", type: "text", placeholder: "From", data: {language: 'en'} %>
+
+    <%= f.date_field :end, id: "calendar", class: "datepicker-here", type: "text", placeholder: "To", data: {language: 'en'}%>
+  </p>
+
+  <p>
+    <%= f.label :price %>: $
+    <%= f.number_field :price %>
+  </p>
+
+  <div class="bfh-selectbox">  
+    <%= f.label :number_of_guests %>: 
+    <%= select(:listing, :num_of_guest, [[1], [2], [3], [4], [5], [6], [7], [8]]) %>
   </div>
-<%end%>
 
-        <%= form_for @listing, html: {multipart: true} do |f| %> 
-            <p>
-              <%= f.label :name_of_your_place %>: 
-              <%= f.text_field :name %>
-            </p>
+  <p>
+    <div class="btn-group" data-toggle="buttons">
+
+      <%= f.label :room_type %><br>
+      <%= label_tag(:room_home, "Entire Home", class: "btn btn-default inactive btn-sm", autocomplete: "off") do %> 
+      <%= radio_button "listing" ,:room_type, "Entire home"%>
+      Entire Home
+     <%end%>
+
+      <%= label_tag(:room_private, "Private room", class: "btn btn-default inactive btn-sm") do %> 
+      <%= radio_button "listing", :room_type, "Private room" %>
+      Private Home
+      <%end%>
+
+      <%= label_tag(:room_shared, "Shared room", class: "btn btn-default inactive btn-sm") do %> 
+      Shared Room
+      <%= radio_button "listing", :room_type, "Shared room"%>
+      <%end%>
+    </div>
+  </p>
+
+  <p>
+    <%= f.label :description %><br>
+    <%= f.text_area :body, class: "form_control", rows: 3, placeholder: "Tell us something about you & your place." %>
+  </p>
+
+  <p>
+    <%= f.label :pictures %>: 
+    <%= f.file_field :picture, class: "btn btn-default btn-sm", value: "Choose photos", multiple: true, accept: 'image/jpeg, image/jpg, image/gif, image/png' %>
+  </p>
+
+  <p>
+    <%= f.label :tags %>: 
+    <%= f.text_field :tag_list, placeholder: "Separate by commas" %>
+  </p>
             
-            <%= f.label :avaibility %>
-            <p>
-              <%= f.date_field :start, id: "calendar", class: "datepicker-here", type: "text", placeholder: "From", data: {language: 'en'} %>
+  <div class="jt-address-autocomplete">
+    <%= f.label :address %>: 
+    <!-- This field is used to search the address on Google Maps -->
+    <%= f.text_field :address, class: 'jt-address-search' %>
 
-              <%= f.date_field :end, id: "calendar", class: "datepicker-here", type: "text", placeholder: "To", data: {language: 'en'}%>
-            </p>
-            <div class="bfh-selectbox">
-              <%= f.label :price %>: $ 
-              <%= f.number_field :price %>
-            </p>     
+    <!-- All fields are hidden because the javascript will set their value automatically -->
+    <% for attr in JT::Rails::Address.fields %>
+      <%= f.hidden_field "address_#{attr}", class: "jt-address-field-#{attr}" %>
+    <% end %>
+  </div>
 
-            
-              <%= f.label :number_of_guests %>: 
-          <%= select(:listing, :num_of_guest, [[1], [2], [3], [4], [5], [6], [7], [8]]) %>
-            </div>
-
-
-            <p>
-              <div class="btn-group" data-toggle="buttons">
-                <%= f.label :room_type %><br>
-              <%= label_tag(:room_home, "Entire Home", class: "btn btn-default inactive btn-sm", autocomplete: "off") do %> 
-              <%= radio_button "listing" ,:room_type, "Entire home"%>
-              Entire Home
-              <%end%>
-              <%= label_tag(:room_private, "Private room", class: "btn btn-default inactive btn-sm") do %> 
-              <%= radio_button "listing", :room_type, "Private room" %>
-              Private Home
-              <%end%>
-              <%= label_tag(:room_shared, "Shared room", class: "btn btn-default inactive btn-sm") do %> 
-              Shared Room
-              <%= radio_button "listing", :room_type, "Shared room"%>
-              <%end%>
-              </div>
-            </p>  
-            <p>
-                <%= f.label :description %><br>
-                <%= f.text_area :body, class: "form_control", rows: 3, placeholder: "Tell us something about you & your place." %>
-            </p>  
-            <p>
-              <%= f.label :pictures %>: 
-              <%= f.file_field :picture, class: "btn btn-default btn-sm", value: "Choose photos", multiple: true, accept: 'image/jpeg, image/jpg, image/gif, image/png' %>
-            </p>
-
-            <p>
-              <%= f.label :tags %>: 
-              <%= f.text_field :tag_list, placeholder: "Separate by commas" %>
-            </p>
-            
-              <div class="jt-address-autocomplete">
-                <%= f.label :address %>: 
-                <!-- This field is used to search the address on Google Maps -->
-                <%= f.text_field :address, class: 'jt-address-search' %>
-
-                <!-- All fields are hidden because the javascript will set their value automatically -->
-                <% for attr in JT::Rails::Address.fields %>
-                    <%= f.hidden_field "address_#{attr}", class: "jt-address-field-#{attr}" %>
-                <% end %>
-              </div>
-              <br>
-            <p>
-              <%= f.submit type: 'submit', class: "btn btn-danger" %>
-            </p>
+  <br>
+  
+  <p>
+    <%= f.submit type: 'submit', class: "btn btn-danger" %>
+  </p>
          
-        <% end %>
- 
+<% end %> 
 <%= link_to 'Back', listings_path %>
 
+
+<script async type="text/javascript" src="//maps.googleapis.com/maps/api/js?libraries=places&callback=googleMapInitialize"></script>
