--- a/app/views/listings/_message.html.erb
+++ b/app/views/listings/_message.html.erb
@@ -5,7 +5,9 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="messageLabel">Send EMAIL to <%=@listing.user.first_name%></h4>
       </div>
+
       <div class="modal-body">
+        <!-- FORM -->
         <form action="send_email" method="post">
           <div class="form-group">
             <label for="subject" class="control-label">Subject:</label>
@@ -19,13 +21,14 @@
             <label for="email" class="control-label">Message:</label>
             <textarea class="form-control" name="message" id="message-text"></textarea>
           </div>
-        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <input type="submit" class="btn btn-danger"></input>
         </form>
+        <!-- FORM END -->
       </div>
+
     </div>
   </div>
 </div>
