--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,35 +1,21 @@
 <div class="container">
 
-<% if !@listings_near.nil?%>
-	<% if !@listings_near.empty?%>
-	<h2>We found <%=@listings_near.size%> results...</h2>
-		<div class="row">
-			<%@listings_near.each do |list| %>
-			<div class="col-lg-2 col-sm-3 col-xs-4">
-				<a href="/listings/<%=list.id%>">
-					<img src="<%=list.picture[0].url%>" class="thumbnail img-responsive"/>
-				</a>
-			</div>	
-			<%end%>
-			</div>
-		<% else %>
-		<h3> We did not find anything, sorry. Check all of our listings </h3>	
-	<%end%>		
-<%end%>
+	<%= render "listings/searchresult"%>
 
-<h2>All listings</h2>
+	<h2>All listings</h2>
 
-		<% @listings.each do |list| %>
+	<% @listings.each do |list| %>
+	  <div class="col-lg-2 col-sm-3 col-xs-4">
+	    <a href='/listings/<%=list.id%>'>
+	      <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
+	    </a>
+	  </div>
+	<%end%>
 
-    <div class="col-lg-2 col-sm-3 col-xs-4">
-        <a href='/listings/<%=list.id%>'>
-             <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
-        </a>
-    </div>
-		<%end%>
-		<div class="clearfix"></div>
-		<br>
-		<center>
-		<%= will_paginate @listings %>
-		</center>
+	<br>
+	<div class="clearfix"></div>
+	
+	<div class="text-center">
+	<%= will_paginate @listings %>
+	</div>
 </div>
