--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -10,25 +10,25 @@
 		<p>You have received a booking from <strong><%=@customer.first_name%> <%=@customer.last_name%></strong></p>
 
 		<p>
-		<h3>Your listing: <%=@listing.name%></h3>
-		<strong>Check in:</strong> <%=@booking.check_in%><br>
-		<strong>Check out:</strong> <%=@booking.check_out%><br>
-		<strong>Guests:</strong> <%=@booking.guests%><br>
-		<strong>Price: </strong> <%=@listing.price%>
+			<h3>Your listing: <%=@listing.name%></h3>
+			<strong>Check in:</strong> <%=@booking.check_in%><br>
+			<strong>Check out:</strong> <%=@booking.check_out%><br>
+			<strong>Guests:</strong> <%=@booking.guests%><br>
+			<strong>Price: </strong> <%=@listing.price%>
+		</p>	
 		<p>
 			You can see details of your reservation with a click of the button below:
-            <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
-              <tr>
-                <td>
-                  <a href="/users/<%=@listing.user_id%>"><strong>Manage your booking</strong></a>
-                </td>
-              </tr>
-            </table>
+      <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td>
+          	<%= link_to "Manage your booking", user_path(@listing.user_id) %>
+          </td>
+        </tr>
+      </table>
 		</p>
 		<p>
 		If you have any questions, please do not hesitate to contact us or the user directly on email <%=@customer.email%> or phone <%=@customer.phone%>. 
-
-
+		</p>
 		<p>
 		Thank you
 		</p>
