--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
 
+	<%= render "listings/tagresult"%>
 	<%= render "listings/searchresult"%>
 
 	<h2>All listings</h2>
-
-	<% @listings.each do |list| %>
-	  <div class="col-lg-2 col-sm-3 col-xs-4">
-	    <a href='/listings/<%=list.id%>'>
-	      <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
-	    </a>
-	  </div>
-	<%end%>
+	<div class="row">	
+		<% @listings.each do |list| %>
+		  <div class="col-lg-2 col-sm-3 col-xs-4">
+		    <a href='/listings/<%=list.id%>'>
+		      <img src="<%=list.picture[0]%>" class="thumbnail img-responsive">
+		    </a>
+		  </div>
+		<%end%>
+	</div>
 
 	<br>
 	<div class="clearfix"></div>
