--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -21,7 +21,7 @@
       <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
         <tr>
           <td>
-          	<%= link_to "Manage your booking", user_path(@listing.user_id) %>
+          	<%= link_to "Manage your booking", user_url(@listing.user_id) %>
           </td>
         </tr>
       </table>
