--- a/app/views/listings/show/_images.html.erb
+++ b/app/views/listings/show/_images.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag @listing.picture[0].main.url, class: "img-responsive" if @listing.picture? %>
+<%= image_tag @listing.picture[0].main.url, class: "img-responsive" if @listing.picture %>
 
 <br><br>
 
