--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <div class="row">
-  <h1>Create Listing</h1>
+  <div class="classic-form">
+    <h1>Create Listing</h1>
     <%= render 'listings/form' %>
   </div>
 </div>
-
